--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.49",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.2.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "connect-mongo": "^5.1.0",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -20,16 +29,7 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-
-    "@types/node": "^24.2.1",
-    "@types/cookie-session": "^2.0.49",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/express-session": "^1.18.2",
-    "@types/multer": "^2.0.0",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
