--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020"],
     "outDir": "dist",
     "rootDir": "src",
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
